Made all workout pages universal so they all look the same and removed uneeded headers from pages that will already have them

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -43,9 +43,8 @@
                 android:textColor="#ffffff"
                 android:inputType="textPersonName"
                 android:maxLines="1"
-                android:singleLine="true" />
-
-
+                android:singleLine="true"
+                />
 
             <EditText
                 android:id="@+id/password"
@@ -56,9 +55,8 @@
                 android:textColor="#ffffff"
                 android:inputType="textPassword"
                 android:maxLines="1"
-                android:singleLine="true" />
-
-
+                android:singleLine="true"
+                />
 
             <Button
                 android:id="@+id/email_login"
