--- a/app/src/main/res/layout/fragment_fp__str__training.xml
+++ b/app/src/main/res/layout/fragment_fp__str__training.xml
@@ -13,21 +13,21 @@
         android:layout_below="@+id/strengthTitle"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="125dp"
-
         android:layout_gravity="center"
-        android:background="#ff1b12" />
+        android:background="#ff1b12"
+        />
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text=" Day 2 "
         android:id="@+id/day2Strength"
-
         android:layout_below="@+id/day1Strength"
         android:layout_marginBottom="75dp"
         android:layout_alignStart="@+id/day1Strength"
         android:layout_gravity="center"
-        android:background="#ff271e" />
+        android:background="#ff271e"
+        />
 
     <Button
         android:layout_width="match_parent"
@@ -37,9 +37,9 @@
         android:layout_below="@+id/day2Strength"
         android:layout_marginBottom="25dp"
         android:layout_alignStart="@+id/day2Strength"
-
         android:layout_gravity="center"
-        android:background="#ff1d19" />
+        android:background="#ff1d19"
+        />
 
     <Button
         android:layout_width="match_parent"
@@ -48,10 +48,10 @@
         android:id="@+id/day4Strength"
         android:layout_below="@+id/day3Strength"
         android:layout_alignStart="@+id/day3Strength"
-
         android:layout_marginBottom="-25dp"
         android:layout_gravity="center"
-        android:background="#ff2219" />
+        android:background="#ff2219"
+        />
 
     <Button
         android:layout_width="match_parent"
@@ -62,32 +62,23 @@
         android:layout_alignStart="@+id/day4Strength"
         android:layout_marginBottom="-75dp"
         android:layout_gravity="center"
-        android:background="#ff1f18" />
-
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text=" Strength Program "
-        android:id="@+id/strengthTitle"
-        android:background="#ff1f12"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_gravity="center_horizontal|top" />
+        android:background="#ff1f18"
+        />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="BACK"
         android:id="@+id/backButtonStrength"
-        android:layout_gravity="left|bottom" />
+        android:layout_gravity="left|bottom"
+        />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="How To"
         android:id="@+id/howTo"
-        android:layout_gravity="right|bottom" />
+        android:layout_gravity="right|bottom"
+        />
 
 </FrameLayout>
