--- a/app/src/main/res/layout/fragment_strength_day_one.xml
+++ b/app/src/main/res/layout/fragment_strength_day_one.xml
@@ -21,35 +21,34 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Barbell Bench Press   "
+        android:text="Barbell Bench Press"
         android:id = "@+id/benchText"
         android:textColor="#ffffff"
         android:textSize="32dp"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
        />
 
             <ImageButton
-                android:scaleType="fitXY"
+        android:scaleType="fitXY"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/closeGripBenchImage"
         android:src="@drawable/bench"
-                android:clickable="true"
+        android:clickable="true"
         android:layout_below="@+id/benchText"
-                android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+                />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:text="5 Sets of 2 heavy(relative) reps."
-                android:layout_gravity="center_horizontal"
+                android:layout_centerHorizontal="true"
                 android:layout_below = "@+id/closeGripBenchImage"
                 android:id="@+id/benchPressDescription"
                 android:textColor="#ffffff"
                 />
-
-
 
 
             <TextView
@@ -60,7 +59,8 @@
                 android:textColor="#ffffff"
                 android:textSize="32dp"
                 android:layout_below="@+id/benchPressDescription"
-                android:layout_centerHorizontal="true" />
+                android:layout_centerHorizontal="true"
+                />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -70,31 +70,32 @@
                 android:textColor="#ffffff"
                 android:textSize="32dp"
                 android:layout_below="@+id/fliesDescription"
-                android:layout_centerHorizontal="true" />
+                android:layout_centerHorizontal="true"
+                />
 
             <ImageButton
-                android:scaleType="fitXY"
+        android:scaleType="fitXY"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/incline"
         android:src="@drawable/incline"
-                android:clickable="true"
+        android:clickable="true"
         android:layout_below="@+id/benchDetail"
-                android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+                />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:text="3 Sets of 8 reps."
-                android:layout_gravity="center_horizontal"
+                android:layout_centerHorizontal="true"
                 android:layout_below = "@+id/incline"
                 android:id="@+id/inclineBenchDescription"
                 android:textColor="#ffffff"
                 />
 
             <ImageButton
-
                 android:scaleType="fitXY"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
@@ -103,7 +104,8 @@
                 android:layout_below="@+id/flyText"
                 android:clickable="true"
                 android:layout_centerHorizontal="true"
-                android:layout_alignParentEnd="true" />
+                android:layout_alignParentEnd="true"
+                />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -111,7 +113,7 @@
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:text="3 Sets of 12 reps."
                 android:id="@+id/fliesDescription"
-                android:layout_gravity="center_horizontal"
+                android:layout_centerHorizontal="true"
                 android:layout_below = "@+id/flies"
                 android:textColor="#ffffff"
                 />
@@ -121,11 +123,11 @@
                 android:layout_height="wrap_content"
                 android:text="BACK"
                 android:id="@+id/Sday1BACK"
-
                 android:layout_gravity="left|bottom"
                 android:layout_below="@+id/incline"
                 android:layout_alignParentBottom="true"
-                android:layout_alignParentStart="true" />
+                android:layout_alignParentStart="true"
+                />
 
 
             <Button
@@ -134,7 +136,8 @@
                 android:text="Workout Complete!"
                 android:id="@+id/completeDay1s"
                 android:layout_below="@+id/incline"
-                android:layout_gravity="right|bottom" />
+                android:layout_gravity="right|bottom"
+                />
 
 
 
