--- a/app/src/main/res/layout/fragment_fp__wgt__loss.xml
+++ b/app/src/main/res/layout/fragment_fp__wgt__loss.xml
@@ -5,19 +5,6 @@
     android:background="@drawable/background2"
     >
 
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Weight Loss"
-        android:id="@+id/weightLossTitle"
-        android:background="#1fff28"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_gravity="center_horizontal"
-        android:textIsSelectable="false" />
-
     <Button
         style="?android:attr/buttonStyleSmall"
         android:layout_width="match_parent"
@@ -26,7 +13,8 @@
         android:id="@+id/day1WeightLoss"
         android:layout_marginBottom="125dp"
         android:layout_gravity="center"
-        android:background="#1aff13" />
+        android:background="#1aff13"
+        />
 
     <Button
         android:layout_width="match_parent"
@@ -35,7 +23,8 @@
         android:id="@+id/day4WeightLoss"
         android:layout_marginBottom="-25dp"
         android:layout_gravity="center"
-        android:background="#1aff31" />
+        android:background="#1aff31"
+        />
 
     <Button
         android:layout_width="match_parent"
@@ -44,7 +33,8 @@
         android:id="@+id/day3WeightLoss"
         android:layout_marginBottom="25dp"
         android:layout_gravity="center"
-        android:background="#14ff29" />
+        android:background="#14ff29"
+        />
 
     <Button
         android:layout_width="match_parent"
@@ -53,7 +43,8 @@
         android:id="@+id/day5WeightLoss"
         android:layout_marginBottom="-75dp"
         android:layout_gravity="center"
-        android:background="#25ff30" />
+        android:background="#25ff30"
+        />
 
     <Button
         android:layout_width="match_parent"
@@ -62,12 +53,15 @@
         android:id="@+id/day2WeightLoss"
         android:layout_marginBottom="75dp"
         android:layout_gravity="center"
-        android:background="#16ff1a" />
+        android:background="#16ff1a"
+        />
+
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="BACK"
         android:id="@+id/backButtonWeightLoss"
-        android:layout_gravity="center_horizontal|bottom" />
+        android:layout_gravity="center_horizontal|bottom"
+        />
 
 </FrameLayout>
