--- a/app/src/main/res/layout/fragment_strength_day_five.xml
+++ b/app/src/main/res/layout/fragment_strength_day_five.xml
@@ -33,7 +33,8 @@
             android:id="@+id/bench"
             android:textColor="#ffffff"
             android:textSize="32dp"
-            android:layout_gravity="center_horizontal"/>
+            android:layout_gravity="center_horizontal"
+            />
 
         <ImageButton
             android:scaleType="fitXY"
@@ -42,14 +43,18 @@
             android:id="@+id/closeGripBenchImage"
             android:src="@drawable/bench"
             android:layout_below="@+id/bench"
+            android:layout_above="@+id/benchPressDescription"
             android:clickable="true"
-            android:layout_gravity="center_horizontal"/>
+            android:layout_gravity="center_horizontal"
+            />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:text="5 Sets of 2 heavy (relative) reps."
+            android:layout_below="@+id/closeGripBenchImage"
+            android:layout_above="@+id/squat"
             android:layout_gravity="center_horizontal"
             android:id="@+id/benchPressDescription"
             android:textColor="#ffffff"
@@ -62,8 +67,10 @@
             android:id="@+id/squat"
             android:textColor="#ffffff"
             android:textSize="32dp"
-            android:layout_below="@+id/closeGripBenchImage"
-            android:layout_gravity="center_horizontal"/>
+            android:layout_below="@+id/benchPressDescription"
+            android:layout_above="@+id/squatImage"
+            android:layout_gravity="center_horizontal"
+            />
 
         <ImageButton
             android:scaleType="fitXY"
@@ -72,8 +79,10 @@
             android:id="@+id/squatImage"
             android:src="@drawable/squat"
             android:layout_below="@+id/squat"
+            android:layout_above="@+id/squatDescription"
             android:clickable="true"
-            android:layout_gravity="center_horizontal"/>
+            android:layout_gravity="center_horizontal"
+            />
 
         <TextView
             android:layout_width="wrap_content"
@@ -81,6 +90,8 @@
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:text="5 Sets of 2 heavy (relative) reps."
             android:layout_gravity="center_horizontal"
+            android:layout_below="@+id/squatImage"
+            android:layout_above="@+id/ohp"
             android:id="@+id/squatDescription"
             android:textColor="#ffffff"
             />
@@ -92,8 +103,10 @@
             android:id="@+id/ohp"
             android:textColor="#ffffff"
             android:textSize="32dp"
-            android:layout_below="@+id/squatImage"
-            android:layout_gravity="center_horizontal"/>
+            android:layout_below="@+id/squatDescription"
+            android:layout_above="@+id/legpresspic"
+            android:layout_gravity="center_horizontal"
+            />
 
         <ImageButton
             android:scaleType="fitXY"
@@ -102,8 +115,10 @@
             android:id="@+id/legpresspic"
             android:src="@drawable/militarypress"
             android:layout_below="@+id/ohp"
+            android:layout_above="@+id/legPressDescrpition"
             android:clickable="true"
-            android:layout_gravity="center_horizontal"/>
+            android:layout_gravity="center_horizontal"
+            />
 
         <TextView
             android:layout_width="wrap_content"
@@ -111,6 +126,7 @@
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:text="5 Sets of 5 reps."
             android:layout_gravity="center_horizontal"
+            android:layout_below="@+id/legpresspic"
             android:id="@+id/legPressDescrpition"
             android:textColor="#ffffff"
             />
@@ -123,7 +139,8 @@
             android:layout_gravity="left|bottom"
             android:layout_below="@+id/legpresspic"
             android:layout_alignParentBottom="true"
-            android:layout_alignParentStart="true" />
+            android:layout_alignParentStart="true"
+            />
 
 
         <Button
@@ -131,7 +148,8 @@
             android:layout_height="wrap_content"
             android:text="Workout Complete!"
             android:id="@+id/completeDay5s"
-            android:layout_gravity="right|bottom" />
+            android:layout_gravity="right|bottom"
+            />
 
 
     </LinearLayout>>
