--- a/app/src/main/res/layout/fragment_weightloss_day_one.xml
+++ b/app/src/main/res/layout/fragment_weightloss_day_one.xml
@@ -18,20 +18,12 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="WEIGHT LOSS DAY 1"
-            android:id="@+id/wlDay1"
-            android:layout_gravity="center_horizontal|top"
-            android:textColor="#ffffff" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:text="1 mile warm up run"
             android:id="@+id/warmupRunText"
             android:layout_gravity="center_horizontal"
             android:textColor="#ffffff"
-            android:textSize="32dp" />
+            android:textSize="32dp"
+            />
 
         <ImageButton
             android:scaleType="fitXY"
@@ -41,7 +33,8 @@
             android:src="@drawable/runner"
             android:layout_gravity="center_horizontal"
             android:clickable="true"
-            android:layout_below="@+id/warmupRunText" />
+            android:layout_below="@+id/warmupRunText"
+            />
 
         <TextView
             android:layout_width="wrap_content"
@@ -50,7 +43,8 @@
             android:id="@+id/warmupDetail"
             android:layout_gravity="center_horizontal"
             android:layout_below="@+id/runningImage"
-            android:textColor="#ffffff" />
+            android:textColor="#ffffff"
+            />
 
         <TextView
             android:layout_width="wrap_content"
@@ -60,7 +54,8 @@
             android:layout_below="@+id/warmupDetail"
             android:textColor="#ffffff"
             android:textSize="32dp"
-            android:id="@+id/walkingLungesText" />
+            android:id="@+id/walkingLungesText"
+            />
 
         <ImageButton
             android:scaleType="fitXY"
@@ -70,7 +65,8 @@
             android:layout_gravity="center_horizontal"
             android:layout_below="@+id/walkingLungesText"
             android:clickable="true"
-            android:src="@drawable/lunges" />
+            android:src="@drawable/lunges"
+            />
 
         <TextView
             android:layout_width="wrap_content"
@@ -79,7 +75,8 @@
             android:id="@+id/lungesDetail"
             android:layout_gravity="center_horizontal"
             android:layout_below="@+id/lungesImage"
-            android:textColor="#ffffff" />
+            android:textColor="#ffffff"
+            />
 
         <TextView
             android:layout_width="wrap_content"
@@ -89,7 +86,8 @@
             android:layout_gravity="center_horizontal"
             android:layout_below="@+id/lungesDetail"
             android:textColor="#ffffff"
-            android:textSize="32dp" />
+            android:textSize="32dp"
+            />
 
         <ImageButton
             android:scaleType="fitXY"
@@ -99,7 +97,8 @@
             android:layout_gravity="center_horizontal"
             android:layout_below="@+id/jumpropeText"
             android:clickable="true"
-            android:src="@drawable/jump_rope" />
+            android:src="@drawable/jump_rope"
+            />
 
         <TextView
             android:layout_width="wrap_content"
@@ -108,21 +107,24 @@
             android:id="@+id/jumpropeDetail"
             android:layout_gravity="center_horizontal"
             android:layout_below="@+id/jumpRopeImage"
-            android:textColor="#ffffff" />
+            android:textColor="#ffffff"
+            />
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Workout Complete!"
             android:id="@+id/completeDay1w"
-            android:layout_gravity="right|bottom" />
+            android:layout_gravity="right|bottom"
+            />
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="BACK"
             android:id="@+id/WLBack"
-            android:layout_gravity="left|bottom" />
+            android:layout_gravity="left|bottom"
+            />
 
 
 
