--- a/app/src/main/res/layout/fragment_weightloss_day_three.xml
+++ b/app/src/main/res/layout/fragment_weightloss_day_three.xml
@@ -18,21 +18,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="WEIGHT LOSS DAY 3"
-                android:id="@+id/wlDay3"
-                android:layout_gravity="center_horizontal|top"
-                android:textColor="#ffffff" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
                 android:text="Bicycle warm up"
                 android:id="@+id/warmupCycleText"
-                android:layout_below = "@+id/w1Day3"
                 android:layout_gravity="center_horizontal"
                 android:textColor="#ffffff"
-                android:textSize="32dp" />
+                android:textSize="32dp"
+                />
 
             <ImageButton
                 android:scaleType="fitXY"
@@ -42,7 +33,8 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_below = "@+id/warmupCycleText"
                 android:clickable="true"
-                android:src="@drawable/cycle" />
+                android:src="@drawable/cycle"
+                />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -51,7 +43,8 @@
                 android:id="@+id/warmupDetail"
                 android:layout_gravity="center_horizontal"
                 android:textColor="#ffffff"
-                android:text="5-10 minute cyle " />
+                android:text="5-10 minute cyle "
+                />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -61,7 +54,8 @@
                 android:layout_below = "@+id/warmupDetail"
                 android:textColor="#ffffff"
                 android:textSize="32dp"
-                android:id="@+id/pullupText" />
+                android:id="@+id/pullupText"
+                />
 
             <ImageButton
                 android:scaleType="fitXY"
@@ -71,7 +65,8 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_below = "@+id/pullupText"
                 android:clickable="true"
-                android:src="@drawable/pullup" />
+                android:src="@drawable/pullup"
+                />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -80,7 +75,8 @@
                 android:id="@+id/pullupDetail"
                 android:layout_gravity="center_horizontal"
                 android:layout_below = "@+id/pullupImage"
-                android:textColor="#ffffff" />
+                android:textColor="#ffffff"
+                />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -90,7 +86,8 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_below = "@+id/pullupDetail"
                 android:textColor="#ffffff"
-                android:textSize="32dp" />
+                android:textSize="32dp"
+                />
 
             <ImageButton
                 android:scaleType="fitXY"
@@ -100,7 +97,8 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_below = "@+id/burpeesText"
                 android:clickable="true"
-                android:src="@drawable/burpees" />
+                android:src="@drawable/burpees"
+                />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -109,21 +107,24 @@
                 android:id="@+id/burpeesDetail"
                 android:layout_gravity="center_horizontal"
                 android:layout_below = "@+id/burpeesImage"
-                android:textColor="#ffffff" />
+                android:textColor="#ffffff"
+                />
 
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Workout Complete!"
                 android:id="@+id/completeDay3w"
-                android:layout_gravity="right|bottom" />
+                android:layout_gravity="right|bottom"
+                />
 
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="BACK"
                 android:id="@+id/WLBack"
-                android:layout_gravity="left|bottom" />
+                android:layout_gravity="left|bottom"
+                />
 
 
         </LinearLayout>>
