--- a/app/src/main/res/layout/fragment_weightloss_day_two.xml
+++ b/app/src/main/res/layout/fragment_weightloss_day_two.xml
@@ -18,21 +18,12 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="WEIGHT LOSS DAY 2"
-            android:id="@+id/wlDay2"
-            android:layout_gravity="center_horizontal|top"
-            android:textColor="#ffffff" />
-
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:text="Bicycle warm up"
             android:id="@+id/warmupCycleText"
             android:layout_gravity="center_horizontal|top"
             android:textColor="#ffffff"
-            android:textSize="32dp" />
+            android:textSize="32dp"
+            />
 
         <ImageButton
             android:scaleType="fitXY"
@@ -42,7 +33,8 @@
             android:id="@+id/cycleImage"
             android:layout_gravity="center_horizontal"
             android:clickable="true"
-            android:src="@drawable/cycle" />
+            android:src="@drawable/cycle"
+            />
 
         <TextView
             android:layout_width="wrap_content"
@@ -51,7 +43,8 @@
             android:id="@+id/warmupDetail"
             android:layout_gravity="center_horizontal"
             android:textColor="#ffffff"
-            android:text="5-10 minute cyle " />
+            android:text="5-10 minute cyle "
+            />
 
         <TextView
             android:layout_width="wrap_content"
@@ -61,7 +54,8 @@
             android:textColor="#ffffff"
             android:textSize="32dp"
             android:layout_below = "@+id/warmupDetail"
-            android:id="@+id/squatText" />
+            android:id="@+id/squatText"
+            />
 
         <ImageButton
             android:scaleType="fitXY"
@@ -71,7 +65,8 @@
             android:layout_gravity="center_horizontal"
             android:layout_below = "@+id/squatText"
             android:clickable="true"
-            android:src="@drawable/squat" />
+            android:src="@drawable/squat"
+            />
 
         <TextView
             android:layout_width="wrap_content"
@@ -80,7 +75,8 @@
             android:id="@+id/squatDetail"
             android:layout_gravity="center_horizontal"
             android:layout_below = "@+id/squatImage"
-            android:textColor="#ffffff" />
+            android:textColor="#ffffff"
+            />
 
         <TextView
             android:layout_width="wrap_content"
@@ -90,7 +86,8 @@
             android:layout_gravity="center_horizontal"
             android:textColor="#ffffff"
             android:layout_below = "@+id/squatDetail"
-            android:textSize="32dp" />
+            android:textSize="32dp"
+            />
 
         <ImageButton
             android:scaleType="fitXY"
@@ -100,7 +97,8 @@
             android:layout_gravity="center_horizontal"
             android:layout_below = "@+id/plankText"
             android:clickable="true"
-            android:src="@drawable/plank" />
+            android:src="@drawable/plank"
+            />
 
         <TextView
             android:layout_width="wrap_content"
@@ -109,21 +107,24 @@
             android:id="@+id/plankDetail"
             android:layout_gravity="center_horizontal"
             android:layout_below = "@+id/plankImage"
-            android:textColor="#ffffff" />
+            android:textColor="#ffffff"
+            />
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Workout Complete!"
             android:id="@+id/completeDay2w"
-            android:layout_gravity="right|bottom" />
+            android:layout_gravity="right|bottom"
+            />
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="BACK"
             android:id="@+id/WLBack"
-            android:layout_gravity="left|bottom" />
+            android:layout_gravity="left|bottom"
+            />
 
     </LinearLayout>>
 
